--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   </head>
   <body>
     
-    <h1> Client Project </h1>
-
+    <h1> Moogle </h1>
+   <input></input>
+   <button onclick="myFunction()">Click me</button>
   </body>
 
 </html>
